# Rendezvous

./: .dockerignore  Makefile  README.md  backend.dockerfile  docker-compose.yml  frontend.dockerfile  package-lock.json  team.md  useful_commands.txt
.Sprint0Files/: UI_UX_rendezvous.md  product.md  product_backlog.md
Sprint0/: product.md  product_backlog.md  team.md
Sprint0/setup/rendezvous_app/: package.json
backend/: .gitignore  README.txt  app.py  users_initialize.sql
backend/database/: create_tables.sql
backend/flask/: app.py  index.html
backend_fastapi/: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend_fastapi/alembic/: env.py
backend_fastapi/backend_fastapi/: crud.py  database.py  main.py  models.py  schemas.py
doc/sprint1/: RPM.md  iteration-01.plan.md  sprint-01.review.md  website.txt
doc/sprint2/: PB.md  sprint-02.review.md
doc/sprint3/: PB.md  iteration-03.plan.md  sprint-03-review.md
doc/sprint4/: PB.md  iteration-04.plan.md  sprint-04-review.md
rendezvous_app/: .env  .env_production  package-lock.json  package.json
rendezvous_app/public/: index.html
rendezvous_app/src/: App.css  App.js  AuthContext.js  PrivateRoute.js  index.js  style.css
rendezvous_app/src/Pages/: Event.js  Event.jsx  EventCreate.js  EventSignup.css  EventSignup.js  EventSignup.jsx  EventsList.js  EventsList.jsx  EventsPage.js  Friend.js  FriendList.css  FriendList.js  FriendRequestsRecievedList.js  FriendRequestsSentList.js  HostEvent.js  about.css  about.js  addfriend.js  event-creation.css  event-creation.js  event-details.css  (+20 more)
(+37 files in other folders)
